# ElegantClipboard

./: .gitignore  CLAUDE.md  FEATURES.md  FEATURES_EN.md  Makefile  README.md  README_EN.md  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: ci.yml  release.yml  scoop-bucket.yml  winget-publish.yml
bucket/: elegantclipboard.json
clipboard-rs/: .cargo_vcs_info.json  .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md  README_ZH.md
clipboard-rs/src/: lib.rs
clipboard-rs/src/platform/: ios.rs  macos.rs  mod.rs  wayland.rs  win.rs  x11.rs
clipboard-rs/tests/: watch_test.rs
docs/: Changlog.md
e2e/: smoke.spec.ts
public/: image-preview.html  preview-presentation.js  surface-tokens.css  text-preview.html
src/: App.tsx  index.css  main.tsx  settings-main.tsx
src-tauri/: Cargo.toml  audit.toml  build.rs
src-tauri/src/: admin_launch.rs  config.rs  hotkey.rs  input_monitor.rs  lib.rs  positioning.rs  proxy.rs  shortcut.rs  task_scheduler.rs  updater.rs  utils.rs  win_v_registry.rs
src-tauri/src/clipboard/: dedup.rs  file_clipboard.rs  format_write.rs  handler.rs  merge_paste.rs  mod.rs  monitor.rs  rtf.rs  source_app.rs
src-tauri/src/commands/: clipboard.rs  data_transfer.rs  databases.rs  file_ops.rs  groups.rs  mod.rs  preview.rs  settings.rs  sync.rs  translate.rs  window.rs  window_utils.rs
src-tauri/src/database/: mod.rs  repository.rs  schema.rs
src-tauri/src/tray/: mod.rs  tray_i18n.rs
src-tauri/src/webdav/: mod.rs
src/components/: CardContentRenderers.tsx  CardSubComponents.test.tsx  CardSubComponents.tsx  ClipboardItemCard.test.tsx  ClipboardItemCard.tsx  ClipboardList.test.ts  ClipboardList.tsx  MasonryVirtualView.tsx  Onboarding.test.tsx  Onboarding.tsx  ScrollToTopButton.tsx  WindowTitleBar.tsx
src/components/settings/: AboutTab.tsx  AppFilterTab.tsx  AudioTab.tsx  ChangelogDialog.tsx  DataTab.tsx  DisplayTab.tsx  GeneralTab.tsx  PluginsTab.tsx  SettingSection.tsx  ShortcutsTab.tsx  SyncTab.tsx  ThemeTab.tsx  TranslateTab.tsx  UpdateDialog.tsx  database-ui.test.ts
src/components/settings/sync/: AutoSyncSection.tsx  ConnectionSection.tsx  ManualSyncSection.tsx  SyncTypesSection.tsx
src/components/ui/: button.tsx  card.tsx  context-menu.tsx  dialog.tsx  input.tsx  scroll-area.tsx  select.tsx  slider.tsx  switch.tsx  toast.tsx  tooltip.tsx
src/hooks/: useInputFocus.test.ts  useInputFocus.ts  useSortableList.ts  useTranslateAvailable.ts  useWebDAVActions.test.ts  useWebDAVActions.ts  useWebDAVAvailable.ts  useWebDAVSettings.test.ts  useWebDAVSettings.ts
src/i18n/: README.md  i18n.test.ts  index.ts  runtime.ts  types.ts
src/i18n/core/: merge.ts  translator.ts
src/i18n/locales/: en-ext.ts  en.ts  zh-CN-ext.ts  zh-CN.ts  zh-TW-ext.ts  zh-TW.ts
src/i18n/messages/en/: core.ts  extended.ts  index.ts
src/i18n/messages/zh-CN/: core.ts  extended.ts  index.ts
src/i18n/messages/zh-TW/: core.ts  extended.ts  index.ts
src/lib/: constants.test.ts  constants.ts  fonts.ts  format.test.ts  format.ts  lease-manager.test.ts  logger.test.ts  masonry-height-cache.ts  masonry-layout.test.ts  masonry-layout.ts  preview-presentation.ts  shortcut-helpers.test.ts  sounds.test.ts  sounds.ts  theme-applier.ts  translate-availability.ts  translate.test.ts  translate.ts  webdav-availability.ts
src/pages/: Settings.tsx  TextEditor.tsx  TranslateResult.tsx
src/perf/: benchmarks.test.ts
src/stores/: clipboard-merge.test.ts  clipboard-merge.ts  clipboard.test.ts  clipboard.ts  databases.test.ts  databases.ts  groups.test.ts  groups.ts  plugin-availability.ts  translate-settings.ts  ui-settings.test.ts  ui-settings.ts  webdav-sync.ts
src/test/: setup.ts
